--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,8 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
+/WebGL Builds/
+/connectwebgl.zip
+/webgl_sharing
+
 # End of https://www.toptal.com/developers/gitignore/api/unity
